[package]
name = "mpl-candy-guard"
version = "0.2.1"
description = "Metaplex Candy Guard: programmatic access control for Candy Machine."
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/mpl-candy-guard"
license-file = "../LICENSE"
edition = "2021"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
test-bpf = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
arrayref = "0.3.6"
mpl-candy-guard-derive = { path = "../macro", version = "0.2.0" }
mpl-token-metadata = { version = "1.4.3", features = ["no-entrypoint"] }
solana-program = "1.13.5"
spl-associated-token-account = { version = "~1.1.1", features = ["no-entrypoint"] }
spl-token = { version = "~3.5.0", features = ["no-entrypoint"] }
solana-gateway = "0.2.2"
assetmanager = { path = "/Users/lucifer/Projects/AGS/nft-merger/programs/assetmanager", features = ["cpi"] }